translation-tool/inputs/source_meta/objects/Hsvc_SFDC_IB_Picklist_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>IB_Portal_Value__c</fullName>
        <label>IB Portal Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Name__c</fullName>
        <label>Picklist Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Value__c</fullName>
        <label>Salesforce Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Hsvc SFDCIB picklist mapping</label>
</CustomObject>